--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ header h2 {
 
 #noticias {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     /* place-items: center; */
 }
 
@@ -87,6 +87,7 @@ header h2 {
     cursor: pointer;
     list-style: none;
     transition: 0.3s;
+    margin: 2%;
 }
 
 .card h3{
